--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build-style-spec": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.style-spec.ts",
     "generate-style-spec": "ts-node build/generate-style-spec.ts",
+    "generate-typings": "ts-node build/generate-typings.ts",
     "test-build": "jest --selectProjects=build",
     "test-integration": "jest --selectProjects=integration",
     "test-unit": "jest --selectProjects=unit"
@@ -36,6 +37,7 @@
     "@mapbox/jsonlint-lines-primitives": "~2.0.2",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/unitbezier": "^0.0.0",
+    "@types/mapbox__point-geometry": "^0.1.2",
     "csscolorparser": "~1.0.2",
     "json-stringify-pretty-compact": "^2.0.0",
     "minimist": "^1.2.5",
@@ -54,6 +56,7 @@
     "@types/geojson": "^7946.0.10",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.14.0",
+    "dts-bundle-generator": "^7.2.0",
     "eslint": "^8.34.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^7.1.0",
