--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:maplibre/maplibre-gl-js.git"
+    "url": "git@github.com:maplibre/maplibre-gl-style-spec.git"
   },
   "bin": {
     "gl-style-migrate": "tsc/src/bin/gl-style-migrate.js",
