--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -19,23 +19,17 @@ jobs:
           architecture: x64
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install GL JS
+      - name: Install NPM packages
         run: npm ci
-      
-      - name: Build GL JS
-        run: |
-          npm run build-prod
-          npm run build-css
       
       - name: Build style spec
         run: |
           npm run build-style-spec
           npm run generate-typings
-          cp -r dist/style-spec/* src/style-spec/dist
+          npm run compile
       
       - name: Check version and publish
         run: |
-          cd src/style-spec
           node -e "if(require('./package').version.includes('dev')) { process.exit(1) }"
           npm publish --access=public
         env:
