--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "rollup": "^3.15.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
+    "semver": "^7.3.8",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
