--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maplibre/maplibre-gl-style-spec",
   "description": "a specification for maplibre gl styles",
-  "version": "18.0.0-pre.1",
+  "version": "18.0.0",
   "author": "MapLibre",
   "keywords": [
     "mapbox",
