separate-rollup-for-binaries

--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -48,6 +48,9 @@ jobs:
           npm run build-style-spec
           npm run generate-typings
           npm run compile
+          npm run build-gl-style-format
+          npm run build-gl-style-migrate
+          npm run build-gl-style-validate
 
       - name: Build Release Notes
         id: release_notes
