--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -50,6 +50,6 @@ jobs:
       - run: npm ci
       - run: npm run generate-style-spec
       - run: npm run generate-typings
-      - run: npm run build-style-spec
+      - run: npm run build
       - run: npm run jest-ci -- --selectProjects build
         if: success() || failure()
