--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maplibre/maplibre-gl-style-spec",
   "description": "a specification for maplibre gl styles",
-  "version": "18.0.1-pre.14",
+  "version": "18.0.1-pre.15",
   "author": "MapLibre",
   "keywords": [
     "mapbox",
@@ -77,6 +77,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "rollup": "^3.15.0",
     "rollup-plugin-executable": "^1.6.3",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "semver": "^7.3.8",
     "ts-jest": "^29.0.5",
