--- a/docs/package.json
+++ b/docs/package.json
@@ -71,11 +71,10 @@
   "scripts": {
     "lint": "eslint --ext .html docs/pages/example --ext .js .",
     "lint-md": "remark docs/pages/",
-    "install-gl-js-deps": "cd maplibre-gl-js/ && npm ci && tsc --outDir rollup/build/tsc",
     "build-api": "documentation build --pe ts --re ts --re d.ts --github --format json --sort-order alpha --config ./docs/documentation.yml --output docs/components/api.json node_modules/maplibre-gl/src/index.ts",
     "build-images": "mkdir -p docs/img/dist && node --loader ts-node/esm --experimental-specifier-resolution=node docs/bin/build-image-config.js && node --loader ts-node/esm --experimental-specifier-resolution=node docs/bin/appropriate-images.js --all",
     "remove-assert": "node remove-assert.js",
-    "build-docs": "run-s install-gl-js-deps build-api build-images remove-assert",
+    "build-docs": "run-s build-api build-images remove-assert",
     "prebuild": "npm run build-docs",
     "prestart": "npm run build-docs",
     "build": "batfish build",
