--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -13,7 +13,17 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - run: cd ./docs
-    - run: npm ci
-    - run: npm run build
-    - run: npm run test
+    
+    - name: Build style spec
+      run: |
+        npm run generate-style-spec
+        npm run generate-typings
+        npm run build
+        npm run compile
+
+    - name: Build docs
+      run: |
+        cd ./docs
+        npm ci
+        npm run build
+        npm run test
