remove api specific files

--- a/docs/package.json
+++ b/docs/package.json
@@ -70,7 +70,7 @@
   },
   "scripts": {
     "lint-md": "remark docs/pages/",
-    "build-api": "documentation build --pe ts --re ts --re d.ts --github --format json --sort-order alpha --config ./docs/documentation.yml --output docs/components/api.json node_modules/maplibre-gl/src/index.ts",
+    "build-api": "documentation build --pe ts --re ts --re d.ts --github --format json --sort-order alpha --config ./docs/documentation.yml --output docs/components/api.json ../src/style-spec.ts",
     "build-images": "mkdir -p docs/img/dist && node --loader ts-node/esm --experimental-specifier-resolution=node docs/bin/build-image-config.js && node --loader ts-node/esm --experimental-specifier-resolution=node docs/bin/appropriate-images.js --all",
     "remove-assert": "node remove-assert.js",
     "build-docs": "run-s build-api build-images remove-assert",
