remove eslint from docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
@@ -30,15 +29,6 @@
     "check-links": "^1.1.8",
     "documentation": "^14.0.0",
     "downshift": "^6.1.9",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-xss": "^0.1.12",
     "execa": "^6.1.0",
     "github-slugger": "1.4.0",
     "husky": "^4.3.0",
@@ -76,7 +66,7 @@
     "build-docs": "run-s build-api build-images remove-assert",
     "prebuild": "npm run build-docs",
     "prestart": "npm run build-docs",
-    "build": "batfish build",
+    "build": "NODE_OPTIONS=\"--openssl-legacy-provider --max_old_space_size=4096\" DEPLOY_ENV=local batfish build",
     "serve-static": "batfish serve-static",
     "test": "npm run test-tape && npm run lint-md && jest",
     "test-tape": "babel-tape-runner test/*.test.js | tap-min",
