--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jest-ci": "jest --reporters=github-actions --reporters=summary",
     "compile": "tsc",
     "lint": "eslint --cache --ext .ts,.tsx --ignore-path .gitignore .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "npm run generate-style-spec"
   },
   "repository": {
     "type": "git",
