--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -37,7 +37,7 @@ jobs:
       - run: npm run jest-ci -- --selectProjects unit --testPathIgnorePatterns "/src/(gl|render|ui)/" 
       - run: npm run jest-ci -- --selectProjects integration --testPathIgnorePatterns "/test/integration/(query|browser|build)/"
   packaging-tests:
-    name: Packaging andd Build tests
+    name: Packaging and Build tests
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
