--- a/docs/package.json
+++ b/docs/package.json
@@ -10,18 +10,26 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.15",
-		"preact": "^10.7.3",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"@astrojs/react": "^2.0.2",
-		"@astrojs/preact": "^2.0.3",
 		"@algolia/client-search": "^4.13.1",
+		"@astrojs/mdx": "^0.17.2",
+		"@astrojs/preact": "^2.0.3",
+		"@astrojs/react": "^2.0.2",
 		"@docsearch/css": "^3.1.0",
 		"@docsearch/react": "^3.1.0",
-		"@types/react": "^17.0.45",
+		"@mapbox/appropriate-images-react": "^2.2.0",
 		"@types/node": "^18.0.0",
-		"@types/react-dom": "^18.0.0"
+		"@types/react": "^17.0.45",
+		"@types/react-dom": "^18.0.0",
+		"astro": "^2.0.15",
+		"object.entries": "^1.1.6",
+		"preact": "^10.7.3",
+		"prism-react-renderer": "^1.3.5",
+		"prop-types": "^15.8.1",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-markdown": "^8.0.5",
+		"remark": "^14.0.2",
+		"remark-react": "^9.0.1"
 	},
 	"devDependencies": {
 		"html-escaper": "^3.0.3"
