--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "build": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.ts",
     "generate-style-spec": "ts-node build/generate-style-spec.ts",
     "generate-typings": "ts-node build/generate-typings.ts",
-    "test-build": "jest --selectProjects=build",
-    "test-integration": "jest --selectProjects=integration",
-    "test-unit": "jest --selectProjects=unit",
-    "jest": "jest",
-    "jest-ci": "jest --reporters=github-actions --reporters=summary",
+    "test-build": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects=build",
+    "test-integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects=integration",
+    "test-unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects=unit",
+    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "jest-ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --reporters=github-actions --reporters=summary",
     "compile": "tsc",
     "lint": "eslint --cache --ext .ts,.tsx --ignore-path .gitignore .",
     "typecheck": "tsc --noEmit",
@@ -44,7 +44,7 @@
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/unitbezier": "^0.0.1",
     "@types/mapbox__point-geometry": "^0.1.2",
-    "csscolorparser": "~1.0.3",
+    "colorjs.io": "^0.4.3",
     "json-stringify-pretty-compact": "^3.0.0",
     "minimist": "^1.2.8",
     "rw": "^1.3.3",
@@ -52,6 +52,7 @@
   },
   "sideEffects": false,
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
