--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     "vite": "^4.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@markdoc/markdoc": "^0.2.2",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
