--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@kobalte/core": "^0.8.2",
     "@markdoc/markdoc": "^0.2.2",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
