--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Build style spec
         run: |
+          cd ./utils
           npm run generate-style-spec
           npm run generate-typings
           npm run build
@@ -55,6 +56,7 @@ jobs:
         id: release_notes
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
         run: |
+          cd ./utils
           RELEASE_NOTES_PATH="${PWD}/release_notes.txt"
           ./build/release-notes.js > ${RELEASE_NOTES_PATH}
           echo "release_notes=${RELEASE_NOTES_PATH}" >> $GITHUB_OUTPUT
@@ -75,6 +77,7 @@ jobs:
       - name: Publish NPM package (regular)
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
         run: |
+          cd ./utils
           npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ORG_TOKEN }}
@@ -82,6 +85,7 @@ jobs:
       - name: Publish NPM package (pre-release)
         if: ${{ steps.prepare_release.outputs.release_type == 'prerelease' }}
         run: |
+          cd ./utils
           npm publish --access=public --tag next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ORG_TOKEN }}
