--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -27,6 +27,8 @@ jobs:
         if: success() || failure()
       - run: |
           cd ./utils    
+          npm run generate-typings
+          npm run build
           npm run typecheck
         if: success() || failure()
   unit-and-integration-tests:
