--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "checkJs": true,
+    "checkJs": false,
     "isolatedModules": false,
     "noEmit": false,
     "declaration": true,
