--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -39,9 +39,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: |
-            ${{ github.workspace }}/coverage-unit/coverage-final.json
-            ${{ github.workspace }}/coverage-integration/coverage-final.json
+          files: ${{ github.workspace }}/coverage-unit/coverage-final.json, ${{ github.workspace }}/coverage-integration/coverage-final.json
           verbose: true
   packaging-tests:
     name: Packaging and Build tests
