--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -12,11 +12,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 18 x64
+      - name: Use Node.js from nvmrc
         uses: actions/setup-node@v3.6.0
         with:
-          node-version: 18
-          architecture: x64
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Get version
