--- a/docs/package.json
+++ b/docs/package.json
@@ -1,39 +1,29 @@
 {
   "name": "v1",
   "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start"
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "node ./.output/server/index.mjs"
   },
   "type": "module",
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/prismjs": "^1.26.0",
-    "esbuild": "^0.17.15",
-    "postcss": "^8.4.31",
-    "solid-start-static": "^0.2.26",
-    "typescript": "^5.0.3",
-    "vite": "^4.2.3"
+    "sass": "^1.69.5",
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "@kobalte/core": "^0.8.2",
     "@markdoc/markdoc": "^0.2.2",
-    "@solidjs/meta": "^0.28.4",
-    "@solidjs/router": "^0.8.2",
-    "highlight.js": "^11.7.0",
+    "@solidjs/meta": "^0.29.3",
+    "@solidjs/router": "^0.10.5",
+    "@solidjs/start": "^0.4.2",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-prism": "^2.3.0",
     "prismjs": "^1.29.0",
-    "sass": "^1.60.0",
-    "solid-js": "^1.7.2",
-    "solid-markdown": "^1.2.1",
-    "solid-start": "^0.2.26",
-    "solidjs-markdoc": "^0.0.2",
-    "undici": "^5.28.3"
-  },
-  "engines": {
-    "node": ">=16.8"
+    "solid-js": "^1.8.7",
+    "vinxi": "^0.0.54"
   }
 }
