--- a/docs/package.json
+++ b/docs/package.json
@@ -17,13 +17,16 @@
     "@markdoc/markdoc": "^0.2.2",
     "@solidjs/meta": "^0.29.3",
     "@solidjs/router": "^0.10.5",
-    "@solidjs/start": "^0.4.2",
+    "@solidjs/start": "^0.4.3",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-prism": "^2.3.0",
     "prismjs": "^1.29.0",
-    "solid-js": "^1.8.7",
-    "vinxi": "^0.0.54"
+    "solid-js": "^1.8.8",
+    "vinxi": "^0.1.1"
+  },
+  "resolutions": {
+    "vite": "^5.0.0"
   }
 }
