--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,7 +29,7 @@ jobs:
         npm run build
 
     - name: create .nojekyll
-      run: touch .output/public/.nojekyll
+      run: touch docs/.output/public/.nojekyll
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
