--- a/docs/package.json
+++ b/docs/package.json
@@ -17,13 +17,13 @@
     "@kobalte/core": "^0.12.6",
     "@solidjs/meta": "^0.29.3",
     "@solidjs/router": "^0.13.2",
-    "@solidjs/start": "^0.7.7",
+    "@solidjs/start": "1.0.0-rc.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-deflist": "^3.0.0",
     "markdown-it-prism": "^2.3.0",
     "prismjs": "^1.29.0",
-    "solid-js": "^1.8.16",
+    "solid-js": "^1.8.17",
     "vinxi": "^0.3.11"
   }
 }
