--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ tsc
 dist
 .DS_Store
 */**/*.g.ts
+.cache
 docs/*
-!docs/assets
+site/
+!docs/assets/extra.css
+!docs/assets/logo.svg
 !docs/README.md
 !docs/types.md
 !docs/sprite.md
