Watch dynamic dependencies for easy development

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,7 +23,7 @@ jobs:
         npm run generate-typings
 
     - name: Build docs
-      run: npm run build-docs
+      run: npm run mkdocs-build
 
     - name: create .nojekyll
       run: touch site/.nojekyll
