--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -23,4 +23,4 @@ jobs:
         npm run generate-typings
 
     - name: Build docs
-      run: npm run build-mkdocs
+      run: npm run mkdocs-build
