Covert style spec documentation to MkDocs (#626)
* Main commit, this adds the generation script and some basic instructions

* Fix json conversion

* remove unwnated space

* Improve glyphs docs

* Add layers support and sdk-support table

* Adds expressions page

* Fix lint

* Update sprite documentation

* Added sources

* Added changelog

* Fix lint

* Added deprecations

* Update readme to include insructions

* Update CI, added function comments

* Fix lint

* Added permalink

* TOC now follows the scrolling of the page

* Improve sources

* Fix lint

* Add ability to add examples to expressions v8 for the docs.

* Fix lint

* Fix typo

* Remove server base url left overs

* Fix links

* Fixed links, added missing properties for layer props.

* Fix last proplematic link

* Fix requires, disabled by and source.

* Added links to feature-state and interpolate

* Added links to the relevant type

* Improve type links

* Added enum to types

* Added enum to types

* Fix all the links for types and added types to main page

* Add LinkedIn, update X logo, add Mastodon

* Remove copyright

* Enable social plugin and configure search

* Add MapLibre colors

* Add instant navigation

* hide TOC Introduction and Changelog

* Update .gitignore

* Quality of life features

* Add examples of expressions and links to pages where one can see them in action

* Removed changelog

* Watch dynamic dependencies for easy development

* Fix typo

* For real

---------

Co-authored-by: Bart Louwers <bart.louwers@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ tsc
 dist
 .DS_Store
 */**/*.g.ts
+.cache
+docs/*
+site/
+!docs/assets/extra.css
+!docs/assets/logo.svg
+!docs/README.md
+!docs/types.md
+!docs/sprite.md
+!docs/deprecations.md
