--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,16 +23,13 @@ jobs:
         npm run generate-typings
 
     - name: Build docs
-      run: |
-        cd ./docs
-        npm ci
-        npm run build
+      run: npm run mkdocs-build
 
     - name: create .nojekyll
-      run: touch docs/.output/public/.nojekyll
+      run: touch site/.nojekyll
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
-        folder: docs/.output/public
+        folder: site
