--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "json-stringify-pretty-compact": "^4.0.0",
     "minimist": "^1.2.8",
     "rw": "^1.3.3",
-    "sort-object": "^3.0.3"
+    "sort-object": "^3.0.3",
+    "tinyqueue": "^2.0.3"
   },
   "sideEffects": false,
   "devDependencies": {
