Fix algorithm, imporve tests readablility

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ dist
 .DS_Store
 */**/*.g.ts
 .cache
-docs/*
+coverage/
 site/
+docs/*
 !docs/assets/extra.css
 !docs/assets/logo.svg
 !docs/README.md
