Disable htmlproofer for local development

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ plugins:
       cards_layout_options:
         background_color: '#295DAA'
   - htmlproofer:
+      enabled: !ENV [ENABLED_HTMLPROOFER, True]
       raise_error_after_finish: True
       raise_error_excludes:
         404: ['variableAnchorOffsetCollection.md']  # https://github.com/maplibre/maplibre-style-spec/issues/646
