--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "generate-style-spec": "node --no-warnings --loader ts-node/esm build/generate-style-spec.ts",
     "generate-typings": "node --no-warnings --loader ts-node/esm build/generate-typings.ts",
     "generate-docs": "node ${WATCH+--watch} --no-warnings --loader ts-node/esm build/generate-docs.ts",
-    "mkdocs": "docker build -t squidfunk/mkdocs-material . && docker run --rm -it -p 8000:8000 -v ${PWD}:/docs -e ENABLED_HTMLPROOFER=false squidfunk/mkdocs-material",
-    "mkdocs-build": "npm run generate-docs && docker build -t squidfunk/mkdocs-material . && docker run --rm -v ${PWD}:/docs squidfunk/mkdocs-material build",
+    "mkdocs": "docker build -t squidfunk/mkdocs-material docs && docker run --rm -it -p 8000:8000 -v ${PWD}:/docs -e ENABLED_HTMLPROOFER=false squidfunk/mkdocs-material",
+    "mkdocs-build": "npm run generate-docs && docker build -t squidfunk/mkdocs-material docs && docker run --rm -v ${PWD}:/docs squidfunk/mkdocs-material build",
     "test-build": "jest --selectProjects=build",
     "test-integration": "jest --selectProjects=integration",
     "test-unit": "jest --selectProjects=unit",
