--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@ repo_url: https://github.com/maplibre/maplibre-style-spec
 site_description: Documentation for the MapLibre Style Specification
 extra_css:
   - assets/extra.css
+exclude_docs: |
+  Dockerfile
 theme:
   name: 'material'
   favicon: https://maplibre.org/favicon.ico
