Check for dead links with mkdocs-htmlproofer-plugin (#657)
* Check for dead links with mkdocs-htmlproofer-plugin

* Update package.json

* Disable htmlproofer for local development

* Do not enable htmlproofer for npm run mkdocs

* Fix link variableanchoroffsetcollection

* eslint

* eslint

* Move Dockerfile

* Exclude Dockerfile

* test

* revert

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@ repo_url: https://github.com/maplibre/maplibre-style-spec
 site_description: Documentation for the MapLibre Style Specification
 extra_css:
   - assets/extra.css
+exclude_docs: |
+  Dockerfile
 theme:
   name: 'material'
   favicon: https://maplibre.org/favicon.ico
@@ -61,3 +63,6 @@ plugins:
   - social:
       cards_layout_options:
         background_color: '#295DAA'
+  - htmlproofer:
+      enabled: !ENV [ENABLED_HTMLPROOFER, True]
+      raise_error_after_finish: True
