--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,9 @@ markdown_extensions:
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
+  - admonition
   - pymdownx.snippets
+  - pymdownx.details
   - pymdownx.superfences
   - pymdownx.escapeall:
       hardbreak: True
