Do not check external urls with htmlproofer (#676)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,6 @@ repo_url: https://github.com/maplibre/maplibre-style-spec
 site_description: Documentation for the MapLibre Style Specification
 extra_css:
   - assets/extra.css
-exclude_docs: |
-  Dockerfile
 theme:
   name: 'material'
   favicon: https://maplibre.org/favicon.ico
@@ -63,6 +61,9 @@ plugins:
   - social:
       cards_layout_options:
         background_color: '#295DAA'
-  - htmlproofer:
-      enabled: !ENV [ENABLED_HTMLPROOFER, True]
-      raise_error_after_finish: True
+validation:
+  omitted_files: warn
+  absolute_links: warn
+  unrecognized_links: warn
+  anchors: warn
+strict: true
