Fix build with new typescript plugin.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,10 @@
     "checkJs": true,
     "isolatedModules": false,
     "noEmit": false,
-    "declaration": true,
+    "declaration": false,
     "esModuleInterop": true,
     "importHelpers": false,
     "jsx": "react",
-    "outDir": "tsc",
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
