Add homepage to `package.json`
Useful to add. You can type `npm home` from command line to see the style spec in browser :-)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "maplibre-gl-js"
   ],
   "license": "ISC",
+  "homepage": "https://maplibre.org/maplibre-style-spec/",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
