--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jest": "jest",
     "jest-ci": "jest --reporters=github-actions --reporters=summary",
     "compile": "tsc",
-    "lint": "eslint --cache --ext .ts,.tsx --ignore-path .gitignore .",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "prepare": "npm run generate-style-spec"
   },
@@ -66,21 +66,19 @@
     "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@types/eslint": "^8.56.6",
     "@types/geojson": "^7946.0.14",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.7",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "dts-bundle-generator": "^9.5.1",
-    "eslint": "^8.57.0",
-    "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-html": "^8.1.2",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.13.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsdoc": "^50.4.3",
-    "eslint-plugin-react": "^7.37.1",
     "glob": "^11.0.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
