--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "compile": "tsc",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "prepare": "npm run generate-style-spec"
+    "prepare": "npm run generate-style-spec && npm run generate-typings && npm run build"
   },
   "repository": {
     "type": "git",
